fixed layout bugs

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,6 +37,8 @@ body  {
     font-size: 62.5%; //1rem = 10px (10 / 16 = 62.5)
     font-weight: 300;
     background-color: var(--bg-light);
+    margin: 0px;
+    overflow-x: hidden;
 
     @media screen and (max-width: 900px) {
         font-size: 50%;
@@ -110,7 +112,7 @@ a, a:link, a:visited {
 
     @media screen and (max-width: 500px) {
         grid-template-rows: max-content 4rem;
-    }
+    } 
 
     &__intro {
         background-color: var(--bg-light);
@@ -343,6 +345,7 @@ a, a:link, a:visited {
         background-image: linear-gradient(to right top, rgba(#0a0f29, .8), rgba(#ff6200, .9)), url("../img/hotel-1.jpg");
         background-size: cover;
         background-position: center;
+        background-repeat: no-repeat;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr 4rem;
@@ -683,20 +686,37 @@ section {
 .testimonial {
     grid-column: 1 / span 1;
     grid-row: 1 / span 2;
-    width: 50%;
+    column-gap: 1rem;
+    width: 100%;
     justify-self: center;
     padding: 4rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media screen and (max-width:700) {
+        width: 100%;
+    }
     
     display: grid;
     grid-template-columns: 6rem 1fr;
-    grid-row: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     font-size: 1rem;
     font-weight: 300;
 
     &__img {
         grid-row: 1 / -1;
         grid-column: 1 / span 1;
+
+        
     }
+
+        & img {
+            width: 100%;
+            max-width: 100%;
+            max-height: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
     &__details {
         grid-column: 2 / span 1;
@@ -775,7 +795,9 @@ section {
         background-position: center;
         height: 70%;
         width: 100%;
-        position: relative; 
+        position: relative;
+        background-repeat: no-repeat;
+            background-position: center;
 
         &-1 {
             background: url('../img/esau-1.png');
@@ -825,7 +847,7 @@ section {
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 3rem;
+    grid-template-rows: 1fr auto;
     
     &__content {
         grid-row: 1 / span 1;
@@ -874,6 +896,10 @@ section {
         display: flex;
         align-items: center;
         justify-content: center;
+
+        @media screen and (max-width: 700px) {
+            flex-direction: column;
+        }
 
         
         & > * {
